# DAIW

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
ai-service/: requirements.txt  service.py
ai-service/providers/: __init__.py
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DESIGN.md  DEVELOPMENT.md  ELEVENLABS_INTEGRATION.md  GETTING_STARTED.md  MVP.md  ROADMAP.md  VISION.md
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/Audio/: AudioEngine.cpp  AudioEngine.h
src/UI/: AudioSettingsPanel.cpp  AudioSettingsPanel.h  SettingsWindow.cpp  SettingsWindow.h
src/UI/Components/: LevelMeter.cpp  LevelMeter.h
src/UI/LookAndFeel/: DAIWLookAndFeel.cpp  DAIWLookAndFeel.h
